fix: carousel image height issue resolved

--- a/frontend/src/assets/styles/index.css
+++ b/frontend/src/assets/styles/index.css
@@ -43,6 +43,11 @@ table th {
   margin-top: 10px;
 }
 
+.carousel-item {
+  max-height: "500px";
+}
+
+
 .carousel-caption {
   position: absolute;
   width: 100%;
